added about text

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,7 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Use this site to get the weather forcast of any city/town/zip code</p>
+        <p>Use this site to get the weather forecast of any city/town/zip code</p>
 
         <form action="">
             <input type="text" placeholder="Location">
